2005-12-29  Don Allingham  <don@gramps-project.org>
	* src/gramps_main.py: move gnome program init to gramps.py
	* src/gramps.py: add gnome program init	        
	* src/StartupDialog.py: use Assistant instead of gnome.ui.druid
	* src/Assistant.py: added
	* src/ArgHandler.py: remove DbPrompter dependency
	* src/GrampsGconfKeys.py: Support for saving window size
	* src/GrampsIniKeys.py: Support for saving window size
	* src/GrampsKeys.py: more gracefully handling missing gconf
	* src/Makefile.am: Fixed moved files
	* src/Report.py: clean up
	* src/ScratchPad.py: use GrampsDisplay instead of gnome.help_display
	* src/StartupDialog.py: clean up
	* src/ViewManager.py: save window size
	* src/gramps_main.py: don't require gnome
	* src/data/gramps.schemas: keys for saving window size

2005-12-29  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Add new submenu showing people that share
	the same event. This for example lists witnesses.
	Added alternate version of the tree; Tree is now centered;

2005-12-28  Don Allingham  <don@gramps-project.org>
	* src/Makefile.am: add PythonMime and GnomeMime
	* src/GnomeMime.py: GNOME based mime handling
	* src/PythonMime.py: Python based mime handling
	* src/AddMedia.py: gnome code isolation
	* src/DisplayState.py: gnome code isolation
	* src/EditPerson.py: gnome code isolation
	* src/EditRepository.py: gnome code isolation
	* src/GnomeMime.py: gnome code isolation
	* src/GrampsDisplay.py: gnome code isolation
	* src/GrampsMime.py: gnome code isolation
	* src/ImageSelect.py: gnome code isolation
	* src/ImgManip.py: gnome code isolation
	* src/PluginMgr.py: toolbar/menu support
	* src/Plugins.py: toolbar/menu support
	* src/RepositoryRefEdit.py: gnome code isolation
	* src/SelectObject.py: gnome code isolation
	* src/Utils.py: gnome code isolation
	* src/ViewManager.py: toolbar/menu support, gnome code isolation
	* src/GrampsDb/_GrampsBSDDB.py: unified messaging
	* src/GrampsDb/_ReadGedcom.py: unified messaging